Bug 88594 - LOCALHELP: LibreOffice compiled Help <F1> crashing session
Summary: LOCALHELP: LibreOffice compiled Help <F1> crashing session
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:4.5.0
Keywords: haveBacktrace
: 88527 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-19 17:45 UTC by V Stuart Foote
Modified: 2015-01-23 12:48 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
console bt (4.76 KB, text/plain)
2015-01-20 21:51 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2015-01-19 17:45:28 UTC
On Windows 7 sp1, 64-bit en-US with /A administrative install of

Version: 4.5.0.0.alpha0+
Build ID: 07e84cae983c08afdba03018413a19d01abb3006
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-01-19_06:15:38
Locale: en_US

using current TB62 installers
master~2015-01-19_06.15.38_LibreOfficeDev_4.5.0.0.alpha0_Win_x86_en-US_de_ar_ja_ru_qtz.msi
master~2015-01-19_06.15.38_LibreOfficeDev_4.5.0.0.alpha0_Win_x86_helppack_en-US.msi

Launch help with <F1>, or main menu Help -> LibreOffice Help, is immediately crashing session, with cycle through recovery.  No substantive error message.

Multiple download of installers--get matching MD5/SHA256 for all attempts.
Comment 1 V Stuart Foote 2015-01-19 20:11:50 UTC
Also present on 64-bit Linux (RHEL 6.5) en-US

Version: 4.5.0.0.alpha0+
Build ID: 07e84cae983c08afdba03018413a19d01abb3006
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-01-19_06:14:43
Locale: en_US

master~2015-01-19_06.14.43_LibreOfficeDev_4.5.0.0.alpha0_Linux_x86-64_rpm.tar.gz
master~2015-01-19_06.14.43_LibreOfficeDev_4.5.0.0.alpha0_Linux_x86-64_rpm_helppack_en-US.tar.gz
Comment 2 Julien Nabet 2015-01-20 21:51:07 UTC
Created attachment 112561 [details]
console bt

On pc Debian x86-64 with master sources updated today, I could reproduce the crash.
I attached logs + bt.
Interesting part:
warn:i18nlangtag:27938:1:i18nlangtag/source/languagetag/languagetag.cxx:1380: LanguageTagImpl::convertLocaleToLang: with bAllowOnTheFlyID invalid 'en-US-US'
warn:legacy.osl:27938:1:sfx2/source/appl/workwin.cxx:2083: The ChildWindow is not registered!
warn:legacy.tools:27938:1:vcl/source/window/stacking.cxx:860: Window::SetParent(): pParent == NULL

Program received signal SIGSEGV, Segmentation fault.
0x00002aaab1ac1f56 in vcl::Window::ImplGetFirstOverlapWindow (this=0x0) at /home/julien/compile-libreoffice/libreoffice/vcl/source/window/window2.cxx:1003
1003	    if ( mpWindowImpl->mbOverlapWin )
(gdb) bt
#0  0x00002aaab1ac1f56 in vcl::Window::ImplGetFirstOverlapWindow (this=0x0) at /home/julien/compile-libreoffice/libreoffice/vcl/source/window/window2.cxx:1003
#1  0x00002aaab195f72c in vcl::Window::SetParent (this=0x67c95d0, pNewParent=0x0) at /home/julien/compile-libreoffice/libreoffice/vcl/source/window/stacking.cxx:914
#2  0x00002aaaaebfbe47 in SfxInfoBarWindow::addButton (this=0x0, pButton=0x67c95d0) at /home/julien/compile-libreoffice/libreoffice/sfx2/source/dialog/infobar.cxx:143
#3  0x00002aaaaee8484b in SfxViewFrame::Notify (this=0x32a3520, rHint=...) at /home/julien/compile-libreoffice/libreoffice/sfx2/source/view/viewfrm.cxx:1386
#4  0x00002aaaaf684618 in SfxBroadcaster::Broadcast (this=0x315e040, rHint=...) at /home/julien/compile-libreoffice/libreoffice/svl/source/notify/SfxBroadcaster.cxx:51
#5  0x00002aaaaea02a07 in SfxEventAsyncer_Impl::TimerHdl (this=0x2ec5040, pAsyncTimer=0x2eb6990)
Comment 3 Julien Nabet 2015-01-20 21:52:26 UTC
Caolan/Chris: bt shows vcl part, one for you?

This is quite strange too:
LanguageTagImpl::convertLocaleToLang: with bAllowOnTheFlyID invalid 'en-US-US'
Comment 4 Commit Notification 2015-01-21 09:28:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4be8eae04eaeaa943cdcfe7443813d47bf995123

Resolves: fdo#88594 crash on F1 with local help

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2015-01-22 11:00:56 UTC
*** Bug 88527 has been marked as a duplicate of this bug. ***
Comment 6 baffclan 2015-01-23 12:48:27 UTC
Thanks for fixing this.
Cannot reproduce this problem on Windows.

Version: 4.5.0.0.alpha0+
Build ID: 5d47b83cef0b2d0486162989722b23e53eb0cdb1
TinderBox: Win-x86@62-TDF, Branch:MASTER, Time: 2015-01-22_23:25:07
Locale: ja_JP