Resolves: fdo#88594 crash on F1 with local help

regression from

commit 1049511c0c5d881df4ba8042744d63d37878296f
Date:   Tue Jan 13 21:43:27 2015 +0900
    infobar: add buttons one by one with addButton

Change-Id: Icf758a9671191836bbe5bc7ca7d978574cb74479